# math996-data-assimilation

./: .gitignore  Cargo.toml  README.md  db.sqlite
book-problems/common/: Cargo.toml
book-problems/common/src/: lib.rs
book-problems/p13/: Cargo.toml
book-problems/p13/src/: main.rs
book-problems/p14/: Cargo.toml
book-problems/p14/src/: main.rs
book-problems/p15/: Cargo.toml
book-problems/p15/src/: main.rs
enkf-rs/: Cargo.toml
enkf-rs/src/: main.rs
lorenz-problems/etkf/: Cargo.toml
lorenz-problems/fourd-var/: Cargo.toml
lorenz-problems/implicit-pf/: Cargo.toml
lorenz-problems/implicit-pf/src/: main.rs
lorenz-problems/ninety-five/: Cargo.toml
lorenz-problems/ninety-five/src/: lib.rs
lorenz-problems/pseudo-orbit/: Cargo.toml
lorenz-problems/shadowing-refinement/: Cargo.toml
lorenz-problems/sirs-std/: Cargo.toml
lorenz-problems/sirs-std/src/: main.rs
lorenz-problems/sixty-three/: Cargo.toml
lorenz-problems/sixty-three/src/: lib.rs  main.rs
na-core/: Cargo.toml
na-core/src/: lib.rs
na-discrete-filtering/: Cargo.toml
na-discrete-filtering/src/: ensemble.rs  error.rs  forcing.rs  lib.rs  utils.rs
na-discrete-filtering/src/kalman/: etkf.rs  kf.rs  mod.rs
na-discrete-filtering/src/kalman/sirs/: mod.rs  std.rs
na-discrete-filtering/src/particle/: implicit.rs  mod.rs  std.rs
na-discrete-filtering/src/variational/: mod.rs
na-pde/: Cargo.toml
na-pde/src/: lib.rs
na-pde/src/finite_difference/hyperbolic/: lax_wendroff.rs
na-quadrature/: Cargo.toml
na-quadrature/src/: lib.rs  rke.rs
na-sde/: Cargo.toml
na-sde/src/: lib.rs
nla-factorize/: Cargo.toml
nla-factorize/src/: cholesky.rs  lib.rs  qr.rs
papers/: outline.tex  refs.bib
plot-helper/: Cargo.toml
plot-helper/src/: lib.rs  xdmf.rs
plot-helper/src/xdmf/: mod.rs
project/assimilate/: Cargo.toml
project/assimilate/src/: lax_wendroff.rs  main.rs  spectral.rs
util/: Cargo.toml
util/src/: data.rs  lib.rs  progress.rs
