
[workspace]
members = ["na-quadrature", "na-discrete-filtering", "na-pde",
           "na-sde", "na-core",
           "util", "plot-helper",

           "project/assimilate",

           "lorenz-problems/sixty-three",
           "lorenz-problems/ninety-five",
           "lorenz-problems/etkf",
           "lorenz-problems/sirs-std",
           "lorenz-problems/fourd-var",
           "lorenz-problems/pseudo-orbit",
           "lorenz-problems/shadowing-refinement",
           "lorenz-problems/implicit-pf",

           "book-problems/common",
           "book-problems/p13",
           "book-problems/p14",
           "book-problems/p15"]

[replace]
"linxal:0.6.0" = { git = "file:///home/dick/Sync/workspace/linxal", branch = "merged-prs" }
"GSL:0.4.31" = { git = "https://github.com/DiamondLovesYou/rust-GSL.git", branch = "merged-all" }

[profile.release]
lto = true
debug = true
#debug-assertions = true
