[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "na-discrete-filtering"
version = "0.1.0"

[dependencies]
ndarray = "^0.9"
ndarray-parallel = "^0.3"
num-complex = "^0.1"
num-traits = "^0.1"
rand = "^0.3"
rayon = "^0.7"

[dependencies.linxal]
version = "^0.6"
default-features = false
features = ["netlib"]
