[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "util"
version = "0.1.0"

[dependencies]
ndarray = "^0.9"
ndarray-parallel = "^0.3"
num-traits = "^0.1"
rand = "^0.3"
rayon = "^0.7"

[dependencies.na-discrete-filtering]
optional = false
path = "../na-discrete-filtering"

[dependencies.na-quadrature]
optional = false
path = "../na-quadrature"

[dependencies.linxal]
version = "^0.6"
default-features = false
features = ["netlib"]