[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "p14"
version = "0.1.0"

[dependencies]
gnuplot = "0.0.22"
ndarray = "0.8.0"
num-traits = "0.1.37"
rand = "0.3.15"

[dependencies.common]
optional = false
path = "../common"

[dependencies.linxal]
version = "*"
default-features = false
features = ["openblas-static"]

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"
