[package]
name = "p15"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]

[dependencies]
gnuplot = "0.0.22"
ndarray = "0.8.0"
num-traits = "0.1.37"
rand = "0.3.15"
linxal = "0.5.1"

[dependencies.common]
optional = false
path = "../common"

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"