[package]
name = "p15"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]

[dependencies]
gnuplot = "^0.0"
ndarray = "^0.9"
num-traits = "^0.1"
rand = "^0.3"

[dependencies.common]
optional = false
path = "../common"

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"

[dependencies.linxal]
version = "^0.6"
default-features = false
features = ["netlib"]
