[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "implicit-pf"
version = "0.1.0"

[dependencies]
gnuplot = "0.0.22"
ndarray = "0.9.1"
ndarray-parallel = "0.3.0"
num-traits = "0.1.37"
rand = "0.3.15"

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"

[dependencies.ninety-five]
optional = false
path = "../ninety-five"

[dependencies.plot-helper]
optional = false
path = "../../plot-helper"

[dependencies.sixty-three]
optional = false
path = "../sixty-three"

[dependencies.util]
optional = false
path = "../../util"

[profile.release]
lto = true
debug = true
