[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "sixty-three"
version = "0.1.0"

[dependencies]
ndarray = "^0.9"

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"

[dependencies.na-quadrature]
optional = false
path = "../../na-quadrature"

[dependencies.plot-helper]
optional = false
path = "../../plot-helper"

[dependencies.util]
optional = false
path = "../../util"
