[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "assimilate"
version = "0.1.0"

[dependencies]
GSL = "0.4.30"
arrayfire = "3.4.3"
gnuplot = "0.0.22"
ndarray = "0.9.1"
ndarray-parallel = "0.3.0"
num-complex = "0.1.37"
num-traits = "0.1.37"
ordered-float = "0.4.0"
rayon = "0.7.0"
roots = "0.0.3"

[dependencies.na-discrete-filtering]
optional = false
path = "../../na-discrete-filtering"

[dependencies.plot-helper]
optional = false
path = "../../plot-helper"

[dependencies.util]
optional = false
path = "../../util"
